Collapse CSS height fix on desktop/mobile

--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -15,6 +15,7 @@
 
 .collapse--container {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -103,5 +104,11 @@
     font-size: 12px;
     line-height: 17px;
     padding: 20px 12px 12px 12px;
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .collapse--container {
+    height: auto;
   }
 }
