--- a/src/pages/Rental/Rental.module.css
+++ b/src/pages/Rental/Rental.module.css
@@ -68,6 +68,7 @@
         flex-direction: column;
         gap: 20px;
         margin-top: 16px;
+        height: auto;
     }
 }
 
@@ -87,5 +88,6 @@
         flex-direction: column;
         gap: 20px;
         margin-top: 16px;
+        height: auto;
     }
 }
